# AJ

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE   README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
brain/: __init__.py  fallback_manager.py  intent_router.py  orchestrator.py  reflection_agent.py  task_planner.py
brain/guardrails/: __init__.py  command_sanitizer.py  output_validator.py  safety_filter.py  toxicity_checker.py
brain/handoff/: __init__.py   agent_bridge.py  context_transfer.py  handoff_manager.py  state_serializer.py
brain/intent_classifier/: __init__.py   classifier.py  embedding_classifier.py  few_shot_classifier.py  intent_labels.py  intent_training_data.json  keyword_matcher.py  semantic_matcher.py
brain/memory/: __init__.py  cache_layer.py  chromadb_client.py  context_compactor.py  embedding_engine.py  entity_extractor.py  episodic_memory.py  knowledge_graph.py  long_term.py  memory_manager.py  memory_pruner.py  memory_schema.sql  redis_client.py  relational_store.py  relationship_mapper.py  semantic_memory.py  short_term.py  (+3 more)
jarvis_core/: __init__.py  bootloader.py  crash_handler.py  daemon_manager.py  lifecycle_manager.py  logger.py  main.py  system_tray.py  updater.py  watchdog.py
jarvis_ui/: __init__.py
tests/: __init__.py  conftest.py
tools/: __init__.py  tool_executor.py  tool_registry.py  tool_schema.py
vision/: __init__.py  face_recognizer.py  scene_describer.py  screen_capture.py  ui_automator.py  vision_analyzer.py  webcam_stream.py
voice_pipeline/: __init__.py
(+272 files in other folders)
